# minilzo-rs

./: .travis.yml  Cargo.toml  README.md  index.html  search-index.js
benches/: bench_basic.rs
minilzo/: enum.Error.html  fn.compress.html  fn.decompress.html  index.html  sidebar-items.js
minilzo-sys/: Cargo.toml  README.md
minilzo-sys/src/: lib.rs  minilzo.rs
minilzo_sys/: LZO1X_1_MEM_COMPRESS.v.html  LZO1X_MEM_COMPRESS.v.html  LZO_E_EOF_NOT_FOUND.v.html  LZO_E_ERROR.v.html  LZO_E_INPUT_NOT_CONSUMED.v.html  LZO_E_INPUT_OVERRUN.v.html  LZO_E_INTERNAL_ERROR.v.html  LZO_E_INVALID_ALIGNMENT.v.html  LZO_E_INVALID_ARGUMENT.v.html  LZO_E_LOOKBEHIND_OVERRUN.v.html  LZO_E_NOT_COMPRESSIBLE.v.html  LZO_E_NOT_YET_IMPLEMENTED.v.html  LZO_E_OK.v.html  LZO_E_OUTPUT_NOT_CONSUMED.v.html  LZO_E_OUTPUT_OVERRUN.v.html  LZO_E_OUT_OF_MEMORY.v.html  Struct_lzo_callback_t.t.html  __lzo_pu32_u.t.html  __lzo_pu_u.t.html  _lzo_config_check.v.html  constant.LZO1X_1_MEM_COMPRESS.html  constant.LZO1X_MEM_COMPRESS.html  constant.LZO_E_EOF_NOT_FOUND.html  constant.LZO_E_ERROR.html  constant.LZO_E_INPUT_NOT_CONSUMED.html  constant.LZO_E_INPUT_OVERRUN.html  constant.LZO_E_INTERNAL_ERROR.html  constant.LZO_E_INVALID_ALIGNMENT.html  constant.LZO_E_INVALID_ARGUMENT.html  constant.LZO_E_LOOKBEHIND_OVERRUN.html  constant.LZO_E_NOT_COMPRESSIBLE.html  constant.LZO_E_NOT_YET_IMPLEMENTED.html  constant.LZO_E_OK.html  constant.LZO_E_OUTPUT_NOT_CONSUMED.html  constant.LZO_E_OUTPUT_OVERRUN.html  constant.LZO_E_OUT_OF_MEMORY.html  fn.__lzo_align_gap.html  fn.__lzo_init_v2.html  fn._lzo_config_check.html  (+145 more)
(+155 files in other folders)
